--- a/event1.html
+++ b/event1.html
@@ -462,6 +462,14 @@ WebFontConfig = {
                                                 <p><b>Q3.Are the programming questions restricted to specific languages? </b><br>A3.The languages that you can write code in will be mentioned in the contest details, if applicable.</p>
                                                 <p><b>Q4.What happens if I indulge in plagiarism? </b><br>A4.we take cheating/plagiarism very seriously an you will be disqualified immediately.</p>
                                             </ol></p>
+                                            <p><b>Contact</b><br>
+                                                <ul>
+                                                    <li>Guru Naveen K - 6383357656</li>
+                                                    <li>Tharun k -9573456942</li>
+                                                </ul>
+                                                </p>
+
+                                            
                                 <br><br><br><br>
                                 <!--<div class="center-alignment"><span><a href="event1_registration.html" style="color: white">Register Now!</a></span></div>--->
                                 <?php
@@ -478,7 +486,7 @@ WebFontConfig = {
                                 <section id='event1_sub'>
                                     <?php
                                     if(isset($_GET['event1'])){
-                                        echo '<p style="color:green; font-size:large; margin-left:5%; margin-top:5%;" align-content="center" >Thank You for registering.</p>';
+                                        echo '<p style="color:green; font-size:large; margin-left:5%; margin-top:5%;" align-content="center" >*Thank You for registering.</p>';
                                     }
                                     else if(isset($_GET['event1r']))
                                     {
