--- a/event2.html
+++ b/event2.html
@@ -454,6 +454,15 @@ WebFontConfig = {
                                                 <p><b>Q2.What happens if I indulge in plagiarism? </b><br>A2.we take cheating/plagiarism very seriously an you will be disqualified immediately.</p>
                                             </ol></p>
                                 <br><br>
+
+                                <p><b>Contact</b><br>
+                                    <ul>
+                                        <li>Jeevan - 7530025110</li>
+                                        <li>Yuvan Karthi -6383266598</li>
+                                    </ul>
+                                    
+                                    </p>
+                                    <br>
                                 <!--<div class="center-alignment"><span><a href="event2_registration.html" style="color: white">Register Now!</a></span></div>--->
                                 <?php
                                     if(isset($_SESSION['kid'])){
