--- a/workshop2_registration.html
+++ b/workshop2_registration.html
@@ -44,31 +44,27 @@
 								<div class="info-item">
 									<span class="lnr lnr-clock"></span>
 									<span class="unit">Time:</span>
-								    8:00 am - 5:00 pm
+								    9:30 am - 4:30 pm 
 								</div>
 								<div class="info-item">
 									<span class="lnr lnr-apartment"></span>
-									<span class="unit">G-Meet link:</span>
-								    .......
+									<span class="unit">Meet link:</span>
+									Link will be mailed.
 								</div>
-								<div class="info-item">
-									<span class="lnr lnr-earth"></span>
-									<span class="unit">Website: </span>
-								    ........
-								</div>
-								<span style="font-size: 20px;"> Price - $10 </span> 
+								
+								<span style="font-size: 20px;"> Price - ₹350 </span> 
 							</div>
 		                </section>
 
 						<!-- SECTION 2 -->
 		                <h4></h4>
 		                <section>
-							<h3>Register to React JS</h3>
-							<div class="form-group">
+							<h3>Details Confirmation </h3>
+							<!-- <div class="form-group">
 								<div class="form-price">
 									<label for="">Price:</label>
-									<span>$10</span>
-								</div>
+									<span>₹350</span>
+								</div> -->
 								<!-- <div class="form-select">
 									<label for="">People:</label>
 									<div class="form-holder">
@@ -87,7 +83,7 @@
 										<i class="zmdi zmdi-chevron-down"></i>
 									</div>
 								</div> -->
-							</div>
+							<!-- </div> -->
 							<?php
 								
 								include("config.php");
