--- a/event2_registration.html
+++ b/event2_registration.html
@@ -39,24 +39,19 @@
 								<div class="info-item">
 									<span class="lnr lnr-calendar-full"></span>
 									<span class="unit">Date:</span>
-								    January 9,2021
+								    February 20,2021
 								</div>
 								<div class="info-item">
 									<span class="lnr lnr-clock"></span>
 									<span class="unit">Time:</span>
-								    8:00 am - 5:00 pm
+								    11:00 am - 1:00 pm
 								</div>
 								<div class="info-item">
 									<span class="lnr lnr-apartment"></span>
-									<span class="unit">G-Meet link:</span>
-								    .......
+									<span class="unit">Meet link:</span>
+									Link will be mailed.
 								</div>
-								<div class="info-item">
-									<span class="lnr lnr-earth"></span>
-									<span class="unit">Website: </span>
-								    ........
-								</div>
-								<span style="font-size: 20px;"> No of Participants - 1 </span> 
+								<span style="font-size: 20px;"> No of Participants:  1 </span> 
 							</div>
 		                </section>
 
